--- a/unit_rem/src/App.css
+++ b/unit_rem/src/App.css
@@ -1,7 +1,7 @@
 :root {
-  --surface_color_parent: #48424f;
-  --surface_color_enfant: #534e58;
-  --surface_color: #362f3b;
+  --surface_color_parent: #353039;
+  --surface_color_enfant: #4a454f;
+  --surface_color: #353039;
   --param_font_color:  #e4dac5;
   --font_children: #e4dac5;
   --font_parent: #7c6c66;
@@ -23,7 +23,7 @@ html {
 }
 
 .general {
-  background-color:  #3e3843;
+  background-color:  #2a242d;
   /* Ombre portée pour l'effet de volume */
   box-shadow: 10px 10px 20px rgb(25, 22, 29), -10px -10px 20px rgb(25, 22, 29);
 
@@ -32,8 +32,8 @@ html {
   justify-content: center;      
   align-items: center;        
 
-  height: 75vh;
-  width: 80vw;
+  height: 85vh;
+  width: 70vw;
 
   border-radius: 30px;
   padding: 20px;
@@ -46,7 +46,7 @@ html {
 }
 .parent {
   background: var(--surface_color_parent);
-  width: 70vw;
+  width: 50vw;
   height: 30vh;
   font-size: 1rem;
   border-radius: 30px;
@@ -85,7 +85,7 @@ html {
   box-shadow: 5px 5px 20px rgb(25, 22, 29), -5px -1px 20px rgba(25, 22, 29, 0.155);
 
   border: var(--param_font_color) solid 0px;
-  width: 70%;
+  width: 80%;
   height: 35%;
   padding: 10px;
   border-radius: 30px;
