--- a/unit_rem/src/App.css
+++ b/unit_rem/src/App.css
@@ -11,6 +11,7 @@
 
 html {
   background-color: #3e3843;
+
   
 }
 
@@ -32,22 +33,23 @@ html {
   justify-content: center;      
   align-items: center;        
 
-  height: 85vh;
-  width: 70vw;
+  height: 34rem;
+  width: 60rem;
 
   border-radius: 30px;
-  padding: 20px;
+  padding: 10px;
  
 }
 
 .texteGeneral {
   color: var(--font_children);
+  margin-bottom: 30px;
  
 }
 .parent {
   background: var(--surface_color_parent);
-  width: 50vw;
-  height: 30vh;
+  width: 35rem;
+  height: 10rem;
   font-size: 1rem;
   border-radius: 30px;
   border: 0px white dashed;
@@ -58,7 +60,7 @@ html {
   justify-content: center;
   align-items: center;
 
-  padding: 10px 25px;
+  padding: 20px 25px;
 
   /* Ombre portée pour l'effet de volume */
   box-shadow: 10px 10px 20px rgba(25, 22, 29, 0.826), -10px -10px 20px rgba(25, 22, 29, 0.13);
@@ -85,8 +87,8 @@ html {
   box-shadow: 5px 5px 20px rgb(25, 22, 29), -5px -1px 20px rgba(25, 22, 29, 0.155);
 
   border: var(--param_font_color) solid 0px;
-  width: 80%;
-  height: 35%;
+  width: 35rem;
+  height: 4rem;
   padding: 10px;
   border-radius: 30px;
   margin-top: 2vh;
@@ -118,11 +120,11 @@ html {
   border-radius: 15px;
   margin-top: 5vh;
   padding: 5px 25px;
-  width:45vw;
+  width:30vw;
 }
 
 .slider {
-  width: 40vw;
+  width: 25vw;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -133,6 +135,9 @@ html {
 .slider h2 {
   font-size: 18px;
   color: var(--param_font_color);
+  margin-top: 5px;
+  margin-bottom: 5px;
+ 
 }
 
 .slider h3 {
